fixes on mobile

--- a/src/styles/content/pages/shop-page.scss
+++ b/src/styles/content/pages/shop-page.scss
@@ -282,6 +282,11 @@
     border: 1px solid var(--color-border-grey);
     transition: $transition;
 
+    @media (max-width: ($breakpoint - 1px)) {
+      order: -1;
+      margin-right: getRem(10px);
+    }
+
     &:hover {
       border-color: var(--color-brown);
       background: var(--color-brown);
@@ -370,6 +375,10 @@
 
   @media (max-width: ($breakpoint - 1px)) {
     margin: 0 -$col-pad-m;
+
+    .catalog-card {
+      width: 100%;
+    }
   }
 
   @media (min-width: $breakpoint) {
@@ -509,13 +518,6 @@
     @media (min-width: $breakpoint) {
       flex-wrap: wrap;
       padding-left: getRem(20px);
-    }
-  }
-
-  .filter-reset {
-    @media (max-width: ($breakpoint - 1px)) {
-      order: -1;
-      margin-right: getRem(10px);
     }
   }
 }
